
enum FileMessageType {
FileInfoReqOp=0x0601; 			                //文件信息请求
FileInfoAckOp=0x0602; 			                //返回文件信息应答
FileUploadReqOp=0x0603; 			            //文件上传请求
FileUploadAckOp=0x0604; 			            //文件上传应答
FileThumbOp=0x0605; 			                //文件上传图片的操作
}

//检查文件相关的信息
message FileInfoReq 
{
    required string md5file = 1;                //文件的MD5信息
    required int64 size = 2;                    //文件大小
    repeated string md5block = 3;               //每个块的md5信息
    optional string extName = 4;                //文件的扩展名
}

message BlockInfo
{
    required int32 blockIdx = 1;                //块序号
    required int32 chunkIdx = 2;                //片的序号
    optional int32 chunkCount = 3;              //片的数量
}

enum FileInfoStatus {
NO_EXISTS=0;                                    //文件不存在
UPLOADING=1;                                    //文件uploading
UPLOADED=2;                                     //文件已经存在
}

//文件信息描述
message FileInfoAck
{
    required FileInfoStatus status = 1;         // 0 文件不存在，1 文件发送中，2 文件存在
    repeated BlockInfo lstblock = 2;            // 当前文件所有块的信息
    optional string url = 3;                    //文件下载链接
    optional int32 extType = 4;                 //扩展信息的类型
    optional bytes ext = 5;                     //文件扩展信息
}

//文件上传包
message FileUploadReq
{
    required string md5file = 1;                //要传送文件的md5
    repeated BlockInfo lstblock = 2;            //传送片的基本信息
    required bytes updata = 3;                  //上传的数据
}

enum UploadStatus {
FINISHED=1; 			                        //文件上传完成
SUCCESS=0; 			                            //数据发送成功
DATA_ERROR=-1; 			                        //数据错误
RE_SEND_FILE=-2; 			                    //文件需要重新上传
}

message ImageInfo {
    required int32 size = 1;                    //文件大小
    required int32 height = 2;                  //图片高度
    required int32 width = 3;                   //图片宽度
    required string url = 4;                    //下载地址
    required int32 s_t = 5;                     //缩略文件大小
    required int32 h_t = 6;                     //缩略文件高度
    required int32 w_t = 7;                     //缩略文件宽度
    required string url_t = 8;                  //缩略文件下载地址
    required string md5_t = 9;                  //缩略文件的md5信息
}

message FileUploadAck
{
    required UploadStatus status = 1;           // 服务器收到状态 1表示文件上传完成， 0表示ok, -1表示数据有问题, 需要重新传送本块, -2 文件需要重新传输
    optional int32 blockIdx = 2;
    optional int32 chunkIdx = 3;
    optional string url = 4;                    //文件下载链接
    optional int32 extType = 5;                 //扩展信息的类型
    optional bytes ext = 6;                     //这里面包含扩展信息的
}
